tests/errors/setchar-err.src
.IPPcode18
defvar GF@fail
move GF@fail string@something
SETCHAR GF@fail int@-1 string@error
write GF@fail